Fixed some styliing errors that cut off a portion of the app if the height was squished.

--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -4,6 +4,5 @@
   align-items: center;
   width: 30%;
   min-width: 30rem;
-  height: 100vh;
   background-image: linear-gradient(to bottom right, #47c661, #2e773d);
 }
